Fix Task9 implementation